# outConsolidator

./: CMakeLists.txt  README.md  outConsolidator.cpp
.github/workflows/: build-test-install.yml
